More z-index added to avoid the burguer button get hidden

--- a/src/components/header/HeaderComponent.scss
+++ b/src/components/header/HeaderComponent.scss
@@ -3,83 +3,76 @@
 @use './../../styles/layout' as layout;
 @use './../../styles/modules' as modules;
 
+header {
+	position: absolute;
+	z-index: -1;
+}
 
 .header {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	z-index: 3;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 
-    .header__wrapper {
+	.header__wrapper {
+		display: flex;
+		flex-flow: row-reverse nowrap; // To control the burguer button position
 
-        display: flex;
-        flex-flow: row-reverse nowrap; // To control the burguer button position
-    
-        .header__nav {
-            @include layout.flexHeader(flex, column, nowrap, center, center);
-            @include modules.navbarHeight(100vh);
-            @include modules.typographyStyle(larger, bold);
-            background-color: var(--color-background);
-            color: var(--typography-color);
-            transition: transform 0.3s ease;
-            transform: translateX(0);
+		.header__nav {
+			@include layout.flexHeader(flex, column, nowrap, center, center);
+			@include modules.navbarHeight(100vh);
+			@include modules.typographyStyle(larger, bold);
+			background-color: var(--color-background);
+			color: var(--typography-color);
+			transition: transform 0.3s ease;
+			transform: translateX(0);
 
-            &.header__nav--hidden {
+			&.header__nav--hidden {
+				z-index: -10;
+				@include modules.hiddenNavbar(-100%);
+			}
 
-                @include modules.hiddenNavbar(-100%)
+			.header__list {
+				@include layout.flexHeader(flex, column, nowrap, center, center);
 
-            }
+				.header__item {
+					height: auto;
+					padding: 0.5rem;
 
-            .header__list {
-                
-                @include layout.flexHeader(flex, column, nowrap, center, center);
+					.header__link {
+						position: relative;
+						text-align: center;
+						@include modules.linksUnderline(10px, 20px);
+						transition: ease-in-out 0.5s;
+						cursor: pointer;
 
-                .header__item {
+						.header__underline {
+							position: absolute;
+							height: 100%;
+							z-index: -1;
+							@include modules.underlineSeparation(25%, 50%);
+							border-bottom: solid 2px var(--color-accent);
+							transform: scale(0) translateY(50px);
+							border-radius: 15px;
+							opacity: 0;
+							transition: ease-in-out 0.5s;
+						}
 
-                    height: auto;
-                    padding: .5rem;
+						&:hover {
+							color: var(--color-accent);
 
-                    .header__link {
-                        position: relative;
-                        text-align: center;
-                        @include modules.linksUnderline(10px, 20px);
-                        transition: ease-in-out .5s;
-                        cursor: pointer;
-
-                        .header__underline {
-                            position: absolute;
-                            height: 100%;
-                            z-index: -1;
-                            @include modules.underlineSeparation(25%, 50%);
-                            border-bottom: solid 2px var(--color-accent);
-                            transform: scale(0) translateY(50px);
-                            border-radius: 15px;
-                            opacity: 0;
-                            transition: ease-in-out .5s;
-                        }
-
-                        &:hover {
-
-                            color: var(--color-accent);
-
-                            .header__underline {
-                                transform: scale(1) translateY(-10px);
-                                opacity: 1;
-                            }
-
-                        }
-
-                    }
-
-                }
-
-            }
-
-        }
-
-    }
-
+							.header__underline {
+								transform: scale(1) translateY(-10px);
+								opacity: 1;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
 }
